fix: ajusta overflow do background principal

--- a/github-profile-search/src/index.css
+++ b/github-profile-search/src/index.css
@@ -8,6 +8,7 @@
     height: 100vh;
     position: relative;
     font-family: var(--default-font-family);
+    overflow: hidden;
 }
 
 @theme{
@@ -21,5 +22,3 @@ input:-webkit-autofill:focus {
   transition: background-color 9999s ease-in-out 0s;
   -webkit-text-fill-color: #000 !important;
 }
-
-//msg de erro
